--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 
 # Google Sheet ID chứa danh sách GPTs và hạn sử dụng
-SHEET_ID=your_google_sheet_id_here
+SHEET_ID=1VlcDnu_rc_shvzOmyQv_wO-nHDWmHxYmpD3-UhGN91Q
 
 # Email người gửi (phải khớp với Gmail API đã cấp quyền)
-EMAIL_FROM=your_email@gmail.com
+EMAIL_FROM=gpt-access-emailer@gpts-access.iam.gserviceaccount.com
 
 # Gmail API không cần mật khẩu nếu dùng service account, nhưng để cấu hình nếu gửi bằng SMTP
 EMAIL_PASS=your_email_password_if_applicable
