--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "gpt-email-api",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
   "dependencies": {
     "express": "^4.18.2",
     "node-fetch": "^2.7.0",
-    "googleapis": "^118.0.0"
+    "googleapis": "^121.0.0",
+    "google-auth-library": "^9.0.0",
+    "google-spreadsheet": "^3.3.0"
   }
 }
