--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Google Sheet ID chứa danh sách GPTs
 SHEET_ID=1VlcDnu_rc_shvzOmyQv_wO-nHDWmHxYmpD3-UhGN91Q
+SHEET_NAME=Sheet1
 # Email người gửi (tài khoản service account hoặc Gmail)
 EMAIL_FROM=gpt-access-emailer@gpts-access.iam.gserviceaccount.com
 # Mật khẩu ứng dụng hoặc để trống nếu không dùng
