--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "gpt-email-api",
   "version": "1.0.0",
   "main": "index.js",
- "dependencies": {
-  "express": "^4.18.2",
-  "node-fetch": "^2.7.0"
-}
+  "dependencies": {
+    "express": "^4.18.2",
+    "node-fetch": "^2.7.0",
+    "google-spreadsheet": "^3.3.0"
+  },
+  "engines": {
+    "node": "18.x"
+  }
 }
